--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <center><h1>Rohith Kottappurath</h1></center>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non facere repellat doloremque aspernatur, obcaecati veniam! Similique ipsam explicabo recusandae facere, velit repellat hic? Laudantium, fugit. Veniam vel ad iure tempore!</p>
-    <p>2nd paragraph starting </p>
+    <P> hello this is my test website. in collab with NoTime community</P>    
 </body>
 </html>
