--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <center><h1>Rohith Kottappurath</h1></center>
-    <P> hello this is my test website. in collab with NoTime community</P>    
+    <P> hello this is my test website. in collab with NoTime community</P>
+    <p>I study EEE at iit kalamassery</p>    
 </body>
 </html>
