tests and scores

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <center><h1>Rohith Kottappurath</h1></center>
     <P> hello this is my test website. in collab with NoTime community</P>
     <p>I study EEE at iit kalamassery</p>    
+    <h1>Tests and scores</h1>
+    <p>
+        jee mains: rank 1
+        jee advanced: rank 10
+    </p>
 </body>
 </html>
